# SdDaemonTmpl

./: README.md
project/: CMakeLists.txt  Dependencies.cmake  README.md  conanfile.txt
project/myservice/: CMakeLists.txt  main.cpp
project/src/: CMakeLists.txt  myproject.cpp
project/src/include/myproject/: myproject.hpp
project/test/: CMakeLists.txt  myprojecttests.cpp
